--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
       "last 1 safari version"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MsJuliaMars/react-mesto-auth.git"
+  },
   "devDependencies": {
     "gh-pages": "^5.0.0"
   }
